# test2

./: README.md  app.py  come.py  covid19-a.csv  covid19.csv  ddd.py  dojou.py  excel.py  fchrom.py  fchrom2.py  fchrom4.py  fchrom5.py  fchrom8.py  france.py  gazo.py  lon.py  map.py  pyproject.toml  rice_count.py  seleniumu.py  sqlite3.py
