[tool.poetry]
name = "test2"
version = "0.1.0"
description = ""
authors = ["github <github>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.7.0"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
plotly = "^5.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
