[tool.poetry]
name = "test2"
version = "0.1.0"
description = ""
authors = ["github <github>"]

[tool.poetry.dependencies]
python = "^3.9.10"
streamlit = "^1.7.0"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
plotly = "^5.6.0"
dash = "^2.2.0"
dash-core-components = "^2.0.0"
numpy = "^1.22.3"
Pillow = "^9.0.1"
opencv-python = "^4.5.5"
urllib3 = "^1.26.9"
selenium = "^4.1.3"
bs4 = "^0.0.1"
ps = "^0.0.2"
openpyxl = "^3.0.9"
google-cloud = "^0.34.0"
appengine-python-standard = "^1.0.0"
pip = "^23.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
